Added regex fro devices and fixed dates on front